--- a/main.html
+++ b/main.html
@@ -47,8 +47,7 @@
     <script>
         let clickCount = 0;
         const maxClicks = 20;
-        const redirectURL = "https://example.com"; // Change this to the desired URL
-        let isCooldown = false;
+        const redirectURL = "https://sirhangsal0t.github.io/Hello/intermediate";
         
         const dialogues = [
             "Are you Kalyani Kore?",
