--- a/main.html
+++ b/main.html
@@ -48,6 +48,7 @@
         let clickCount = 0;
         const maxClicks = 20;
         const redirectURL = "https://sirhangsal0t.github.io/Hello/intermediate";
+        let isCooldown = false;
         
         const dialogues = [
             "Are you Kalyani Kore?",
