--- a/final.html
+++ b/final.html
@@ -42,10 +42,15 @@
             font-size: 3em;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
         }
+        h2 {
+            font-size: 1.5em;
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+        }
     </style>
 </head>
 <body>
     <div class="slideshow"></div>
     <h1>YAAAY! You said YES! 🎉🎊</h1>
+    <h2>See you at prom bby, I love you </h2>
 </body>
 </html>
