--- a/final.html
+++ b/final.html
@@ -23,21 +23,36 @@
         .slideshow {
             position: fixed;
             top: 0;
-            left: 0;
+            left: -50%;
             width: 100%;
             height: 100%;
             z-index: -1;
             background-size: cover;
             background-position: center;
-            animation: slideshow 25s infinite;
         }
-        @keyframes slideshow {
-            0%, 20% { background-image: url('image1.jpg'); }
-            25%, 45% { background-image: url('image2.jpg'); }
-            50%, 70% { background-image: url('image3.jpg'); }
-            75%, 95% { background-image: url('image4.jpg'); }
-            100% { background-image: url('image5.jpg'); }
+        .slideshow img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            opacity: 0;
+            transition: opacity 2s ease-in-out;
         }
+        @keyframes fade {
+            0% { opacity: 0; }
+            12.5% { opacity: 1; }
+            25% { opacity: 1; }
+            37.5% { opacity: 0; }
+            100% { opacity: 0; }
+        }
+        .slideshow img:nth-child(1) { animation: fade 40s infinite 0s; }
+        .slideshow img:nth-child(2) { animation: fade 40s infinite 5s; }
+        .slideshow img:nth-child(3) { animation: fade 40s infinite 10s; }
+        .slideshow img:nth-child(4) { animation: fade 40s infinite 15s; }
+        .slideshow img:nth-child(5) { animation: fade 40s infinite 20s; }
+        .slideshow img:nth-child(6) { animation: fade 40s infinite 25s; }
+        .slideshow img:nth-child(7) { animation: fade 40s infinite 30s; }
+        .slideshow img:nth-child(8) { animation: fade 40s infinite 35s; }
         h1 {
             font-size: 3em;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
@@ -49,8 +64,17 @@
     </style>
 </head>
 <body>
-    <div class="slideshow"></div>
-    <h1>YAAAY! You said YES! 🎉🎊</h1>
+    <div class="slideshow">
+        <img src="image_11.jpg" alt="Slide 1">
+        <img src="image_12.jpg" alt="Slide 2">
+        <img src="image_13.jpg" alt="Slide 3">
+        <img src="image_14.jpg" alt="Slide 4">
+        <img src="image_15.jpg" alt="Slide 5">
+        <img src="image_16.jpg" alt="Slide 6">
+        <img src="image_17.jpg" alt="Slide 7">
+        <img src="image_18.jpg" alt="Slide 8">
+    </div>
+    <h1>🎉🎊 YAAAY! You said YES! 🎉🎊</h1>
     <h2>See you at prom bby, I love you </h2>
 </body>
 </html>
